# GPhoto2GDrive

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
