[tool.poetry]
name = "gphoto2gdrive"
version = "0.1.0"
description = "Backup photos from Google Photo to Google Drive"
authors = ["Alexander Burchenko <aabur@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
ruff = "^0.0.269"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
deptry = "^0.11.0"
pip-audit = "^2.5.5"
types-toml = "^0.10.8.6"
types-psycopg2 = "^2.9.21.10"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 80

[tool.ruff]
line-length = 80
